# lv_port_pc_eclipse

./: .cproject  .gitignore  .gitmodules  .project  BUILDING  CMakeLists.txt  Dockerfile  Makefile  README.md  a.c  conanfile.txt  confdef.txt  generate_cmake_filelist_targets.sh  hal_init_SDL2.cc  hal_init_fbdev.cc  hw_conf.h  icon_pipe.c  img_conf.h  img_square_x2.c  logo.c  lv_comp_conf.h  lv_conf.defaults  lv_conf.h  lv_demo_conf.h  lv_drv_conf.h  lv_ex_conf.h  main.c  makefile  manifest.json  misc_conf.h  mouse_cursor_icon.c  pc_simulator.launch  trans.c  trans.h  xcode_instruments_entitle.xml
.tracecompass/: .project
Debug/: img_bubbles.d  img_bubbles_blue.d  img_close.d  img_effect_bg.d  img_effects2.d  img_square_x2.d  img_underwater.d  img_waterdrop.d  makefile  objects.mk  sources.mk  subdir.mk
Debug/hal/disp/: subdir.mk
Debug/hal/indev/: subdir.mk
Debug/hal/systick/: subdir.mk
Debug/hw/: subdir.mk
Debug/hw/dev/dispc/: subdir.mk
Debug/hw/dev/ext_mem/: subdir.mk
Debug/hw/dev/gsm/: subdir.mk
Debug/hw/dev/io_exp/: subdir.mk
Debug/hw/dev/sens/: subdir.mk
Debug/hw/dev/tp/: subdir.mk
Debug/hw/dev/ui/: subdir.mk
Debug/hw/dev/wifi/: subdir.mk
Debug/hw/per/: subdir.mk
Debug/hw/per/psp/kea/: subdir.mk
Debug/hw/per/psp/pc/: subdir.mk
Debug/hw/per/psp/pic24f_33f/: subdir.mk
Debug/hw/per/psp/pic32mx/: subdir.mk
Debug/hw/per/psp/pic32mz/: subdir.mk
Debug/lvgl/lv_app/: lv_app_spt.d  subdir.mk
Debug/lvgl/lv_app/lv_app_util/: subdir.mk
Debug/lvgl/lv_appx/: lv_app_visual.d  subdir.mk
Debug/lvgl/lv_draw/: subdir.mk
Debug/lvgl/lv_obj/: subdir.mk
Debug/lvgl/lv_objx/: lv_switch.d  subdir.mk
Debug/misc/: subdir.mk
Debug/misc/comm/: subdir.mk
Debug/misc/fs/: subdir.mk
Debug/misc/fs/fat32/: subdir.mk
Debug/misc/fs/fat32/option/: subdir.mk
Debug/misc/fs/linuxfs/: subdir.mk
Debug/misc/fs/ufs/: subdir.mk
Debug/misc/gfx/: subdir.mk
Debug/misc/gfx/fonts/: subdir.mk
Debug/misc/math/: subdir.mk
Debug/misc/mem/: subdir.mk
Debug/misc/os/: subdir.mk
Debug/misc/others/: subdir.mk
Debug/misc/templ/: subdir.mk
cmake/: FindSDL2_image.cmake  declare_lvgl_target_library.cmake
hal/: README.md  hal.h
hal/disp/: disp.c  disp.h
hal/indev/: indev.c  indev.h
hal/systick/: systick.c  systick.h
lv_lib_freetype/: README.md  lv_freetype.c  lv_freetype.h
scripts/: git-archive-zip.sh
